--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
-pygame==2.6.1
+cffi==1.16.0
+comtypes==1.3.1
+game==0.0.5
+Panda3D==1.10.14
+pillow==10.2.0
+pycparser==2.21
+pygame==2.5.2
+pymunk==6.6.0
+pypiwin32==223
+pyttsx3==2.90
+pywin32==306
